--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
       
       - name: Run tests
         run: |
-          pytest tests/ -v --cov=jupytercluster --cov-report=xml --cov-report=html
+          pytest tests/ -v --cov=jupytercluster --cov-report=xml --cov-report=html --cov-report=term-missing
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
