--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -9,7 +9,7 @@ jobs:
     name: Validate Branch Protection
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       
       - name: Check branch name
         run: |
@@ -23,7 +23,7 @@ jobs:
         run: |
           # Basic commit message validation (semantic PR action only works on PRs)
           COMMIT_MSG=$(git log -1 --pretty=%B)
-          if [[ ! "$COMMIT_MSG" =~ ^(feat|fix|docs|style|refactor|test|chore)(\([^)]+\))?: ]]; then
+          if [[ ! "$COMMIT_MSG" =~ ^(feat|fix|docs|style|refactor|test|chore)(\([^)]+\))?:.* ]]; then
             echo "Commit message should follow format: type(scope): description"
             echo "Types: feat, fix, docs, style, refactor, test, chore"
             echo "Current message: $COMMIT_MSG"
@@ -34,7 +34,7 @@ jobs:
     name: Enforce Code Standards
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -45,6 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+          pip install pytest-cov
       
       - name: Run all tests
         run: |
