--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          pip install pytest pytest-asyncio pytest-cov pytest-mock
+          pip install pytest-asyncio pytest-mock
       
       - name: Run tests
         run: |
