--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,10 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-asyncio>=0.21",
+    "pytest-cov>=4.0",
     "black>=22.0",
     "flake8>=5.0",
+    "isort>=5.0",
 ]
 
 [project.urls]
