--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,10 @@ updates:
     labels:
       - "dependencies"
       - "docker"
+    ignore:
+      - dependency-name: "python"
+        update-types: ["version-update:semver-major"]
+        versions: [">=3.14"]
   
   - package-ecosystem: "github-actions"
     directory: "/"
