--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: jupytercluster:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
