--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,6 +166,9 @@ jobs:
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v6
       
@@ -192,7 +195,7 @@ jobs:
       - uses: actions/checkout@v6
       
       - name: Set up Kubernetes
-        uses: engineerd/setup-kind@v0.8.0
+        uses: engineerd/setup-kind@v0.7.0
         with:
           version: "v0.20.0"
       
