--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,11 @@ packages = ["jupytercluster"]
 line-length = 100
 target-version = ['py38']
 
+[tool.isort]
+profile = "black"
+line_length = 100
+multi_line_output = 3
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
