chore: Add testing files to .gitignore
- Prevent internal testing scripts and docs from being committed

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,11 @@ OAUTH_SETUP.md
 QUICKSTART.md
 SECURITY.md
 TESTING_GUIDE.md
+TESTING_STEPS.md
+
+# Testing scripts
+test-*.sh
+*test*.sh
 
 # Config files with secrets
 config.yaml
