--- a/helm/jupytercluster/templates/ingress.yaml
+++ b/helm/jupytercluster/templates/ingress.yaml
@@ -17,18 +17,39 @@ spec:
   tls:
     {{- range .Values.ingress.tls }}
     - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
+        {{- if kindIs "slice" .hosts }}
+          {{- range .hosts }}
+          - {{ . | quote }}
+          {{- end }}
+        {{- else }}
+          {{- range .hosts }}
+          - {{ . | quote }}
+          {{- end }}
         {{- end }}
+      {{- if .secretName }}
       secretName: {{ .secretName }}
+      {{- end }}
     {{- end }}
   {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
+    {{- if kindIs "string" . }}
+    - host: {{ . | quote }}
+      http:
+        paths:
+          - path: {{ $.Values.ingress.path | default "/" }}
+            pathType: {{ $.Values.ingress.pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ include "jupytercluster.fullname" $ }}
+                port:
+                  number: {{ $.Values.service.port }}
+    {{- else }}
     - host: {{ .host | quote }}
       http:
         paths:
-          {{- range .paths }}
+          {{- if .paths }}
+            {{- range .paths }}
           - path: {{ .path }}
             pathType: {{ .pathType }}
             backend:
@@ -36,7 +57,17 @@ spec:
                 name: {{ include "jupytercluster.fullname" $ }}
                 port:
                   number: {{ $.Values.service.port }}
+            {{- end }}
+          {{- else }}
+          - path: {{ $.Values.ingress.path | default "/" }}
+            pathType: {{ $.Values.ingress.pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ include "jupytercluster.fullname" $ }}
+                port:
+                  number: {{ $.Values.service.port }}
           {{- end }}
+    {{- end }}
     {{- end }}
 {{- end }}
 
