feat: Add comprehensive health probe configuration
- Add proper timeouts and thresholds to livenessProbe
- Add proper timeouts and thresholds to readinessProbe
- Configure initialDelaySeconds to prevent premature failures
- Add successThreshold for proper probe behavior
- Fixes connection refused errors in Kubernetes deployments

--- a/helm/jupytercluster/templates/deployment.yaml
+++ b/helm/jupytercluster/templates/deployment.yaml
@@ -50,10 +50,20 @@ spec:
             httpGet:
               path: /api/health
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+            successThreshold: 1
           readinessProbe:
             httpGet:
               path: /api/health
               port: http
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+            successThreshold: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.persistence.enabled }}
