--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,11 @@ jobs:
       - name: Run tests
         run: |
           pytest tests/ -v --cov=jupytercluster --cov-report=xml --cov-report=html --cov-report=term-missing
+          # Explicitly run template and health tests to catch errors early
+          pytest tests/test_templates.py -v
+          pytest tests/test_api.py::TestAPIHandlers::test_health_endpoint -v
+          pytest tests/test_api.py::TestAPIHandlers::test_health_endpoint_readiness -v
+          pytest tests/test_api.py::TestAPIHandlers::test_health_endpoint_connection -v
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
