Add namespace-scoped RBAC option and multi-tenancy visibility features
- Add rbac.clusterScoped option (default: true) for production safety
- Add namespace-scoped RBAC support for multi-tenant clusters
- Add allowNamespaceCreation config option (default: true)
- Add user profile page showing namespace restrictions and accessible namespaces
- Enhance hub creation form with namespace restrictions and hub limits
- Add Profile link to navbar for all users
- Update spawner to check namespace creation permissions
- Remove cluster-scoped resources from namespace-scoped RBAC

--- a/helm/jupytercluster/templates/deployment.yaml
+++ b/helm/jupytercluster/templates/deployment.yaml
@@ -46,6 +46,20 @@ spec:
               value: {{ .Values.config.defaultNamespacePrefix | quote }}
             - name: JUPYTERCLUSTER_DEFAULT_HELM_CHART
               value: {{ .Values.config.defaultHelmChart | quote }}
+            - name: JUPYTERCLUSTER_ALLOW_NAMESPACE_CREATION
+              value: {{ .Values.config.allowNamespaceCreation | default true | quote }}
+            {{- if .Values.config.authenticator }}
+            - name: JUPYTERCLUSTER_AUTHENTICATOR_CLASS
+              value: {{ .Values.config.authenticator.class | quote }}
+            {{- if .Values.config.authenticator.users }}
+            - name: JUPYTERCLUSTER_SIMPLEAUTHENTICATOR_USERS
+              value: {{ .Values.config.authenticator.users | toJson | quote }}
+            {{- end }}
+            {{- if .Values.config.authenticator.adminUsers }}
+            - name: JUPYTERCLUSTER_SIMPLEAUTHENTICATOR_ADMIN_USERS
+              value: {{ .Values.config.authenticator.adminUsers | toJson | quote }}
+            {{- end }}
+            {{- end }}
           livenessProbe:
             httpGet:
               path: /api/health
